--- a/AppodealObjectiveCDemo/AppodealObjectiveCDemo/Base.lproj/ObjC.storyboard
+++ b/AppodealObjectiveCDemo/AppodealObjectiveCDemo/Base.lproj/ObjC.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -74,16 +75,9 @@
                         <viewControllerLayoutGuide type="bottom" id="1Yl-Ti-06S"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="PIK-ai-O0m">
-                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OKv-fX-bLv" customClass="ASRoundButton">
-                                <rect key="frame" x="16" y="140" width="343" height="30"/>
-                                <state key="normal" title="MREC banner"/>
-                                <connections>
-                                    <segue destination="N0W-HX-4F5" kind="show" id="GzM-cg-faf"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qko-Yl-Xvn" customClass="ASRoundButton">
                                 <rect key="frame" x="16" y="85" width="343" height="30"/>
                                 <state key="normal" title="Custom banner"/>
@@ -104,11 +98,8 @@
                         <constraints>
                             <constraint firstItem="qko-Yl-Xvn" firstAttribute="top" secondItem="G9f-kK-40i" secondAttribute="bottom" constant="25" id="A2n-7k-bgN"/>
                             <constraint firstItem="qko-Yl-Xvn" firstAttribute="leading" secondItem="PIK-ai-O0m" secondAttribute="leadingMargin" id="A6F-0o-1YF"/>
-                            <constraint firstItem="OKv-fX-bLv" firstAttribute="trailing" secondItem="PIK-ai-O0m" secondAttribute="trailingMargin" id="MjF-ou-NUJ"/>
-                            <constraint firstItem="OKv-fX-bLv" firstAttribute="leading" secondItem="PIK-ai-O0m" secondAttribute="leadingMargin" id="Nbx-fS-uQu"/>
                             <constraint firstItem="qko-Yl-Xvn" firstAttribute="trailing" secondItem="PIK-ai-O0m" secondAttribute="trailingMargin" id="ahA-4i-b5n"/>
                             <constraint firstItem="G9f-kK-40i" firstAttribute="trailing" secondItem="PIK-ai-O0m" secondAttribute="trailingMargin" id="fuy-gG-R2m"/>
-                            <constraint firstItem="OKv-fX-bLv" firstAttribute="top" secondItem="qko-Yl-Xvn" secondAttribute="bottom" constant="25" id="hfa-He-yO3"/>
                             <constraint firstItem="G9f-kK-40i" firstAttribute="leading" secondItem="PIK-ai-O0m" secondAttribute="leadingMargin" id="ka1-oU-ljv"/>
                             <constraint firstItem="G9f-kK-40i" firstAttribute="top" secondItem="XgU-2Q-61f" secondAttribute="bottom" constant="30" id="xGu-Og-IuN"/>
                         </constraints>
@@ -128,7 +119,7 @@
                         <viewControllerLayoutGuide type="bottom" id="JqM-IQ-cjJ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="JBL-uo-eov">
-                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fl4-DO-qpg" customClass="ASRoundButton">
@@ -192,10 +183,10 @@
                         <viewControllerLayoutGuide type="bottom" id="PSX-mI-Fli"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Fzp-8j-8RV">
-                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yOn-zs-uOG" customClass="AppodealBannerView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yOn-zs-uOG" customClass="APDBannerView">
                                 <rect key="frame" x="27.5" y="0.0" width="320" height="50"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
@@ -231,60 +222,6 @@
                 </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2205.5999999999999" y="1382.1589205397302"/>
-        </scene>
-        <!--Delegate-->
-        <scene sceneID="oBT-DH-nRw">
-            <objects>
-                <viewController autoresizesArchivedViewToFullSize="NO" automaticallyAdjustsScrollViewInsets="NO" id="N0W-HX-4F5" customClass="ASRectangleBannerViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="2XF-fT-B5x"/>
-                        <viewControllerLayoutGuide type="bottom" id="PaE-07-aiw"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Qh6-P5-eRu">
-                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jZX-1S-3fI" customClass="AppodealMRECView">
-                                <rect key="frame" x="37.5" y="152" width="300" height="250"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="JrI-1C-tl2"/>
-                                    <constraint firstAttribute="height" constant="250" id="Qqj-P2-0gx"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="size" keyPath="adSize">
-                                        <size key="value" width="300" height="250"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <outlet property="delegate" destination="N0W-HX-4F5" id="eyN-1p-8bJ"/>
-                                    <outlet property="rootViewController" destination="N0W-HX-4F5" id="Wkn-PX-jhr"/>
-                                </connections>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <gestureRecognizers/>
-                        <constraints>
-                            <constraint firstItem="jZX-1S-3fI" firstAttribute="centerX" secondItem="Qh6-P5-eRu" secondAttribute="centerX" id="Z1v-4b-hbr"/>
-                            <constraint firstItem="jZX-1S-3fI" firstAttribute="centerY" secondItem="Qh6-P5-eRu" secondAttribute="centerY" id="s1W-so-lvc"/>
-                        </constraints>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="dR3-aO-DkQ" appends="YES" id="Vf3-eI-B8d"/>
-                        </connections>
-                    </view>
-                    <navigationItem key="navigationItem" title="MREC banner" id="guf-fX-IYY"/>
-                    <connections>
-                        <outlet property="bannerView" destination="jZX-1S-3fI" id="PQx-Bs-s2T"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qJ7-RK-AQk" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="dR3-aO-DkQ">
-                    <connections>
-                        <action selector="tapOnView:" destination="N0W-HX-4F5" id="gFM-ZA-94G"/>
-                    </connections>
-                </tapGestureRecognizer>
-            </objects>
-            <point key="canvasLocation" x="2206" y="2047"/>
         </scene>
         <!--Rewarded video-->
         <scene sceneID="wg7-f3-ORb">
@@ -355,11 +292,48 @@
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                         <segue destination="uVG-eL-bWZ" kind="relationship" relationship="viewControllers" id="Ymb-Dw-iTe"/>
+                        <segue destination="J7E-6E-3ft" kind="relationship" relationship="viewControllers" id="KIO-y3-l2M"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-290" y="-17"/>
+        </scene>
+        <!--Native-->
+        <scene sceneID="VuD-X1-eE9">
+            <objects>
+                <viewController id="J7E-6E-3ft" customClass="ASNativeViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SLe-O1-d01"/>
+                        <viewControllerLayoutGuide type="bottom" id="Nay-Tk-rOW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="UZQ-kl-BKE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ozu-A6-lm4">
+                                <rect key="frame" x="16" y="89" width="343" height="440"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ozu-A6-lm4" secondAttribute="height" multiplier="343:440" id="dbx-8J-P1p"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ozu-A6-lm4" firstAttribute="leading" secondItem="UZQ-kl-BKE" secondAttribute="leading" constant="16" id="Lzg-o8-MvX"/>
+                            <constraint firstAttribute="trailing" secondItem="ozu-A6-lm4" secondAttribute="trailing" constant="16" id="VP6-u8-tdt"/>
+                            <constraint firstItem="ozu-A6-lm4" firstAttribute="centerY" secondItem="UZQ-kl-BKE" secondAttribute="centerY" id="YV7-sw-IUp"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Native" image="tab_native" selectedImage="tab_native" id="xYf-8S-F67"/>
+                    <connections>
+                        <outlet property="nativeAdContainer" destination="ozu-A6-lm4" id="DF1-Qx-MN6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WRT-pa-W75" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-290.39999999999998" y="727.28635682158927"/>
         </scene>
         <!--Banner-->
         <scene sceneID="IDe-w1-RWE">
@@ -369,7 +343,7 @@
                     <tabBarItem key="tabBarItem" title="Banner" image="tab_banner" selectedImage="tab_banner" id="pX3-ep-o7w"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="QLA-ZD-nEc">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <color key="barTintColor" red="0.9382818341255188" green="0.21338838338851929" blue="0.23215025663375854" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -380,7 +354,6 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="jzw-xq-PVl">
-                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </toolbar>
                     <connections>
@@ -395,6 +368,7 @@
     <resources>
         <image name="tab_banner" width="32" height="32"/>
         <image name="tab_interstitial" width="25" height="25"/>
+        <image name="tab_native" width="25" height="25"/>
         <image name="tab_rewarded" width="25" height="25"/>
     </resources>
 </document>
