--- a/AppodealObjectiveCDemo/AppodealObjectiveCDemo/Base.lproj/ObjC.storyboard
+++ b/AppodealObjectiveCDemo/AppodealObjectiveCDemo/Base.lproj/ObjC.storyboard
@@ -212,6 +212,7 @@
                     <navigationItem key="navigationItem" title="Custom banner" id="p9C-r3-l52"/>
                     <connections>
                         <outlet property="bannerView" destination="yOn-zs-uOG" id="cR4-Cm-7Dl"/>
+                        <outlet property="height" destination="qsz-zW-OPx" id="YoX-hS-kyv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qxy-PD-AyQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -292,7 +293,7 @@
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                         <segue destination="uVG-eL-bWZ" kind="relationship" relationship="viewControllers" id="Ymb-Dw-iTe"/>
-                        <segue destination="J7E-6E-3ft" kind="relationship" relationship="viewControllers" id="KIO-y3-l2M"/>
+                        <segue destination="VC5-zb-KsX" kind="relationship" relationship="viewControllers" id="4ZG-tx-Hwp"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -300,40 +301,86 @@
             <point key="canvasLocation" x="-290" y="-17"/>
         </scene>
         <!--Native-->
-        <scene sceneID="VuD-X1-eE9">
+        <scene sceneID="NM9-BI-LeK">
             <objects>
-                <viewController id="J7E-6E-3ft" customClass="ASNativeViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="SLe-O1-d01"/>
-                        <viewControllerLayoutGuide type="bottom" id="Nay-Tk-rOW"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="UZQ-kl-BKE">
+                <tableViewController id="VC5-zb-KsX" customClass="ASNativeViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Pp4-4E-1DB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ozu-A6-lm4">
-                                <rect key="frame" x="16" y="89" width="343" height="440"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="ozu-A6-lm4" secondAttribute="height" multiplier="343:440" id="dbx-8J-P1p"/>
-                                </constraints>
-                            </view>
-                        </subviews>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="ozu-A6-lm4" firstAttribute="leading" secondItem="UZQ-kl-BKE" secondAttribute="leading" constant="16" id="Lzg-o8-MvX"/>
-                            <constraint firstAttribute="trailing" secondItem="ozu-A6-lm4" secondAttribute="trailing" constant="16" id="VP6-u8-tdt"/>
-                            <constraint firstItem="ozu-A6-lm4" firstAttribute="centerY" secondItem="UZQ-kl-BKE" secondAttribute="centerY" id="YV7-sw-IUp"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Native" image="tab_native" selectedImage="tab_native" id="xYf-8S-F67"/>
-                    <connections>
-                        <outlet property="nativeAdContainer" destination="ozu-A6-lm4" id="DF1-Qx-MN6"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="WRT-pa-W75" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <color key="separatorColor" red="0.42629679568527923" green="0.42629679568527923" blue="0.42629679568527923" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="kASDefaultCell" rowHeight="254" id="X3b-zr-9ad">
+                                <rect key="frame" x="0.0" y="28" width="375" height="254"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="X3b-zr-9ad" id="yac-rY-nna">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="254"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lorem_ipsum" translatesAutoresizingMaskIntoConstraints="NO" id="Ece-ZN-ulZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="149"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="Ece-ZN-ulZ" secondAttribute="height" multiplier="375:149" id="N6g-fm-ed9"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d33-Nt-8hX">
+                                            <rect key="frame" x="16" y="157" width="343" height="21"/>
+                                            <attributedString key="attributedText">
+                                                <fragment content="Lorem ipsum dolor sit amet.">
+                                                    <attributes>
+                                                        <font key="NSFont" size="17" name="BodoniSvtyTwoITCTT-Bold"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbc-ap-ZwT">
+                                            <rect key="frame" x="16" y="186" width="343" height="49"/>
+                                            <attributedString key="attributedText">
+                                                <fragment>
+                                                    <string key="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum venenatis nunc, sed condimentum turpis pretium gravida. Pellentesque vehicula, eros id tincidunt lobortis, nunc mauris scelerisque ex, tempor mollis massa lorem quis elit. Aenean ultrices tellus vehicula sem blandit volutpat. Nunc ut nibh lacus. Pellentesque posuere in nunc sed ornare. Praesent molestie finibus magna eget fermentum. Phasellus luctus lobortis ex, ac viverra est mattis vitae. Mauris posuere, sem nec posuere placerat, est turpis posuere tortor, nec placerat neque nisl at mi. Suspendisse maximus gravida semper. Vivamus ultricies odio sit amet leo imperdiet viverra. Fusce eu quam a justo pretium pulvinar sit amet a nibh.</string>
+                                                    <attributes>
+                                                        <font key="NSFont" size="12" name="BradleyHandITCTT-Bold"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Ece-ZN-ulZ" firstAttribute="top" secondItem="yac-rY-nna" secondAttribute="top" id="9hy-cZ-10m"/>
+                                        <constraint firstItem="Ece-ZN-ulZ" firstAttribute="leading" secondItem="yac-rY-nna" secondAttribute="leading" id="Smj-Li-Euj"/>
+                                        <constraint firstItem="pbc-ap-ZwT" firstAttribute="top" secondItem="d33-Nt-8hX" secondAttribute="bottom" constant="8" id="Tta-Zh-k7U"/>
+                                        <constraint firstItem="pbc-ap-ZwT" firstAttribute="trailing" secondItem="yac-rY-nna" secondAttribute="trailingMargin" id="XQu-iP-32k"/>
+                                        <constraint firstItem="d33-Nt-8hX" firstAttribute="trailing" secondItem="yac-rY-nna" secondAttribute="trailingMargin" id="YMY-kY-FQS"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="pbc-ap-ZwT" secondAttribute="bottom" constant="8" id="a56-9e-9dq"/>
+                                        <constraint firstItem="pbc-ap-ZwT" firstAttribute="leading" secondItem="yac-rY-nna" secondAttribute="leadingMargin" id="aRW-py-ZBK"/>
+                                        <constraint firstItem="d33-Nt-8hX" firstAttribute="leading" secondItem="yac-rY-nna" secondAttribute="leadingMargin" id="kMz-6n-dDn"/>
+                                        <constraint firstItem="d33-Nt-8hX" firstAttribute="top" secondItem="Ece-ZN-ulZ" secondAttribute="bottom" constant="8" id="kaA-Qc-fnr"/>
+                                        <constraint firstAttribute="trailing" secondItem="Ece-ZN-ulZ" secondAttribute="trailing" id="sxj-Ai-hC4"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="kASNativeCell" rowHeight="197" id="vh0-f2-xwK">
+                                <rect key="frame" x="0.0" y="282" width="375" height="197"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vh0-f2-xwK" id="hue-48-bAt">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="197"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="VC5-zb-KsX" id="JfL-LJ-F5n"/>
+                            <outlet property="delegate" destination="VC5-zb-KsX" id="daj-xd-B2r"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Native" image="tab_native" selectedImage="tab_native" id="qJ8-lZ-PZj"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4c6-97-CtY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-290.39999999999998" y="727.28635682158927"/>
+            <point key="canvasLocation" x="-290.39999999999998" y="725.48725637181417"/>
         </scene>
         <!--Banner-->
         <scene sceneID="IDe-w1-RWE">
@@ -366,6 +413,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="lorem_ipsum" width="221" height="161"/>
         <image name="tab_banner" width="32" height="32"/>
         <image name="tab_interstitial" width="25" height="25"/>
         <image name="tab_native" width="25" height="25"/>
