--- a/AppodealSwiftUIDemo/AppodealSwiftUIDemo/Base.lproj/Native.xib
+++ b/AppodealSwiftUIDemo/AppodealSwiftUIDemo/Base.lproj/Native.xib
@@ -43,7 +43,7 @@
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uFv-Oj-4qk">
                     <rect key="frame" x="16" y="293" width="288" height="33"/>
-                    <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="33" id="XHE-U4-bSU"/>
                     </constraints>
@@ -90,7 +90,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="LzW-Tr-Jvp" firstAttribute="top" secondItem="ug7-8P-s42" secondAttribute="bottom" constant="16" id="3Cu-I2-xER"/>
                 <constraint firstItem="ug7-8P-s42" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="9gJ-1M-brG"/>
@@ -101,6 +101,7 @@
                 <constraint firstItem="iR6-PG-XdG" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="5" id="MOF-ly-1xi"/>
                 <constraint firstItem="0aq-Ka-m4t" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="5" id="N7f-YR-JpJ"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="uFv-Oj-4qk" secondAttribute="bottom" constant="16" id="OuL-Sa-9pJ"/>
+                <constraint firstItem="meF-qu-Y1Y" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ug7-8P-s42" secondAttribute="trailing" constant="8" symbolic="YES" id="VtR-QV-UJq"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="uFv-Oj-4qk" secondAttribute="trailing" constant="16" id="a9C-aO-Vxq"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="iR6-PG-XdG" secondAttribute="trailing" constant="16" id="cHh-FF-cnz"/>
                 <constraint firstItem="uFv-Oj-4qk" firstAttribute="top" secondItem="LLi-4R-bDh" secondAttribute="bottom" constant="1" id="ceU-aE-OmA"/>
